Fix checkbox alignment

--- a/popup/choose_beast.css
+++ b/popup/choose_beast.css
@@ -57,7 +57,3 @@ input {
   white-space: nowrap;
   padding-right: 20px;
 }
-
-#accumulative {
-  margin-left: -20px;
-}
